# twitter-data-acquisition

./: .gitignore  makefile  pyproject.toml
data/ref/: pt-fatphobia-expressions.json  pt-homophobia-expressions.json  pt-misogyny-expressions.json  pt-partyism-expressions.json  pt-racist-expressions.json
notebooks/: __init__.py  tweets_acquisition.ipynb  tweets_batch.ipynb  utils.py
src/: __init__.py  dataEngineering.py  getConfig.py  twitterTool.py
