[tool.poetry]
name = "twitter-data-acquisition"
version = "0.1.0"
description = ""
authors = ["Felipe Oliveira <fp.ramos.oliveira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^4.14.0"
pandas = "^2.0.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
